--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@reach/router": "^1.2.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^3.0.1",
     "styled-components": "^4.2.0",
     "uniqid": "^5.0.3"
   },
